srcfiles = [
    lnInclude_hack,
    'edgeMesh/edgeMesh.C',
    'edgeMesh/edgeMeshIO.C',
    'edgeMesh/edgeMeshNew.C',
    'edgeMesh/edgeFormats/edgeMeshFormatsCore.C',
    'edgeMesh/edgeFormats/edgeMesh/edgeMeshFormat.C',
    'edgeMesh/edgeFormats/edgeMesh/edgeMeshFormatRunTime.C',
    'edgeMesh/edgeFormats/nastran/NASedgeFormat.C',
    'edgeMesh/edgeFormats/nastran/NASedgeFormatRunTime.C',
    'edgeMesh/edgeFormats/obj/OBJedgeFormat.C',
    'edgeMesh/edgeFormats/obj/OBJedgeFormatRunTime.C',
    'edgeMesh/edgeFormats/starcd/STARCDedgeFormat.C',
    'edgeMesh/edgeFormats/starcd/STARCDedgeFormatRunTime.C',
    'edgeMesh/edgeFormats/vtk/VTKedgeFormat.C',
    'edgeMesh/edgeFormats/vtk/VTKedgeFormatRunTime.C',
    'edgeMesh/edgeMeshTools/edgeMeshTools.C',
    'edgeMesh/edgeMeshTools/edgeMeshFeatureProximity.C',
    'edgeMesh/featureEdgeMesh/featureEdgeMesh.C',
    'edgeMesh/extendedEdgeMesh/extendedEdgeMesh.C',
    'edgeMesh/extendedEdgeMesh/extendedEdgeMeshNew.C',
    'edgeMesh/extendedEdgeMesh/extendedEdgeMeshFormat.C',
    'edgeMesh/extendedEdgeMesh/extendedEdgeMeshFormatRunTime.C',
    'edgeMesh/extendedFeatureEdgeMesh/extendedFeatureEdgeMesh.C',
    'edgeMesh/extendedFeatureEdgeMesh/extendedFeatureEdgeMeshFormat.C',
    'edgeMesh/extendedFeatureEdgeMesh/extendedFeatureEdgeMeshFormatRunTime.C',
    'cellClassification/cellClassification.C',
    'cellClassification/cellInfo.C',
    'cellQuality/cellQuality.C',
    'cellDist/cellDistFuncs.C',
    'cellDist/patchWave/patchWave.C',
    'cellDist/wallPoint/wallPoint.C',
    'cellFeatures/cellFeatures.C',
    'polyMeshZipUpCells/polyMeshZipUpCells.C',
    'primitiveMeshGeometry/primitiveMeshGeometry.C',
    'meshSearch/meshSearch.C',
    'meshSearch/meshSearchFACE_CENTRE_TRISMeshObject.C',
    'meshSearch/meshSearchMeshObject.C',
    'fields/pointPatchFields/uniformFixedValue/uniformFixedValuePointPatchFields.C',
    'fields/volume/polyMeshFields.C',
    'meshTools/meshTools.C',
    'algorithms/PointEdgeWave/PointEdgeWaveBase.C',
    'algorithms/PointEdgeWave/pointEdgePoint.C',
    'algorithms/PatchEdgeFaceWave/PatchEdgeFaceWaveBase.C',
    'algorithms/PatchEdgeFaceWave/patchEdgeFaceInfo.C',
    'algorithms/PatchEdgeFaceWave/patchPatchDist.C',
    'algorithms/PatchEdgeFaceWave/patchEdgeFaceRegions.C',
    'algorithms/MeshWave/MeshWaveBase.C',
    'algorithms/MeshWave/FaceCellWaveBase.C',
    'regionSplit/regionSplit.C',
    'regionSplit/localPointRegion.C',
    'regionSplit2D/regionSplit2D.C',
    'indexedOctree/treeDataFace.C',
    'indexedOctree/treeDataPrimitivePatchBase.C',
    'indexedOctree/treeDataTriSurface.C',
    'searchableSurfaces/closedTriSurfaceMesh/closedTriSurfaceMesh.C',
    'searchableSurfaces/searchableBox/searchableBox.C',
    'searchableSurfaces/searchableCone/searchableCone.C',
    'searchableSurfaces/searchableCylinder/searchableCylinder.C',
    'searchableSurfaces/searchableDisk/searchableDisk.C',
    'searchableSurfaces/searchableExtrudedCircle/searchableExtrudedCircle.C',
    'searchableSurfaces/searchablePlane/searchablePlane.C',
    'searchableSurfaces/searchablePlate/searchablePlate.C',
    'searchableSurfaces/searchableRotatedBox/searchableRotatedBox.C',
    'searchableSurfaces/searchableSphere/searchableSphere.C',
    'searchableSurfaces/searchableSurface/searchableSurface.C',
    'searchableSurfaces/searchableSurfaceCollection/searchableSurfaceCollection.C',
    'searchableSurfaces/searchableSurfaces/searchableSurfaces.C',
    'searchableSurfaces/searchableSurfacesQueries/searchableSurfacesQueries.C',
    'searchableSurfaces/searchableSurfaceWithGaps/searchableSurfaceWithGaps.C',
    'searchableSurfaces/subTriSurfaceMesh/subTriSurfaceMesh.C',
    'searchableSurfaces/triSurfaceMesh/triSurfaceMesh.C',
    'coordSet/coordSet.C',
    'coordSet/writers/common/coordSetWriter.C',
    'coordSet/writers/common/coordSetWriterBuffers.C',
    'coordSet/writers/common/coordSetWriterNew.C',
    'coordSet/writers/csv/csvCoordSetWriter.C',
    'coordSet/writers/ensight/ensightCoordSetWriter.C',
    'coordSet/writers/gltf/gltfCoordSetWriter.C',
    'coordSet/writers/gnuplot/gnuplotCoordSetWriter.C',
    'coordSet/writers/nastran/nastranCoordSetWriter.C',
    'coordSet/writers/null/nullCoordSetWriter.C',
    'coordSet/writers/raw/rawCoordSetWriter.C',
    'coordSet/writers/vtk/foamVtkCoordSetWriter.C',
    'coordSet/writers/vtk/vtkCoordSetWriter.C',
    'coordSet/writers/xmgrace/xmgraceCoordSetWriter.C',
    'graph/curve.C',
    'graph/graph.C',
    'graph/writers/raw/rawGraphWriter.C',
    'graph/writers/gnuplot/gnuplotGraphWriter.C',
    'graph/writers/xmgrace/xmgraceGraphWriter.C',
    'topoSet/topoSets/cellBitSet.C',
    'topoSet/topoSets/cellSet.C',
    'topoSet/topoSets/cellZoneSet.C',
    'topoSet/topoSets/faceBitSet.C',
    'topoSet/topoSets/faceBoolSet.C',
    'topoSet/topoSets/faceSet.C',
    'topoSet/topoSets/faceZoneSet.C',
    'topoSet/topoSets/pointBitSet.C',
    'topoSet/topoSets/pointSet.C',
    'topoSet/topoSets/pointZoneSet.C',
    'topoSet/topoSets/topoBoolSet.C',
    'topoSet/topoSets/topoBitSet.C',
    'topoSet/topoSets/topoSet.C',
    'topoSet/topoSetSource/topoSetSource.C',
    'topoSet/cellSources/topoSetCellSource/topoSetCellSource.C',
    'topoSet/cellSources/boundaryToCell/boundaryToCell.C',
    'topoSet/cellSources/boxToCell/boxToCell.C',
    'topoSet/cellSources/cellToCell/cellToCell.C',
    'topoSet/cellSources/clipPlaneToCell/clipPlaneToCell.C',
    'topoSet/cellSources/cylinderAnnulusToCell/cylinderAnnulusToCell.C',
    'topoSet/cellSources/cylinderToCell/cylinderToCell.C',
    'topoSet/cellSources/faceToCell/faceToCell.C',
    'topoSet/cellSources/faceZoneToCell/faceZoneToCell.C',
    'topoSet/cellSources/fieldToCell/fieldToCell.C',
    'topoSet/cellSources/haloToCell/haloToCell.C',
    'topoSet/cellSources/labelToCell/labelToCell.C',
    'topoSet/cellSources/nbrToCell/nbrToCell.C',
    'topoSet/cellSources/nearestToCell/nearestToCell.C',
    'topoSet/cellSources/patchToCell/patchToCell.C',
    'topoSet/cellSources/pointToCell/pointToCell.C',
    'topoSet/cellSources/regionToCell/regionToCell.C',
    'topoSet/cellSources/rotatedBoxToCell/rotatedBoxToCell.C',
    'topoSet/cellSources/shapeToCell/shapeToCell.C',
    'topoSet/cellSources/searchableSurfaceToCell/searchableSurfaceToCell.C',
    'topoSet/cellSources/sphereToCell/sphereToCell.C',
    'topoSet/cellSources/surfaceToCell/surfaceToCell.C',
    'topoSet/cellSources/targetVolumeToCell/targetVolumeToCell.C',
    'topoSet/cellSources/zoneToCell/zoneToCell.C',
    'topoSet/faceSources/topoSetFaceSource/topoSetFaceSource.C',
    'topoSet/faceSources/boundaryToFace/boundaryToFace.C',
    'topoSet/faceSources/boxToFace/boxToFace.C',
    'topoSet/faceSources/cellToFace/cellToFace.C',
    'topoSet/faceSources/clipPlaneToFace/clipPlaneToFace.C',
    'topoSet/faceSources/cylinderAnnulusToFace/cylinderAnnulusToFace.C',
    'topoSet/faceSources/cylinderToFace/cylinderToFace.C',
    'topoSet/faceSources/faceToFace/faceToFace.C',
    'topoSet/faceSources/labelToFace/labelToFace.C',
    'topoSet/faceSources/normalToFace/normalToFace.C',
    'topoSet/faceSources/patchToFace/patchToFace.C',
    'topoSet/faceSources/pointToFace/pointToFace.C',
    'topoSet/faceSources/regionToFace/regionToFace.C',
    'topoSet/faceSources/searchableSurfaceToFace/searchableSurfaceToFace.C',
    'topoSet/faceSources/sphereToFace/sphereToFace.C',
    'topoSet/faceSources/zoneToFace/zoneToFace.C',
    'topoSet/faceSources/holeToFace/holeToFace.C',
    'topoSet/pointSources/topoSetPointSource/topoSetPointSource.C',
    'topoSet/pointSources/boxToPoint/boxToPoint.C',
    'topoSet/pointSources/cellToPoint/cellToPoint.C',
    'topoSet/pointSources/clipPlaneToPoint/clipPlaneToPoint.C',
    'topoSet/pointSources/cylinderToPoint/cylinderToPoint.C',
    'topoSet/pointSources/faceToPoint/faceToPoint.C',
    'topoSet/pointSources/labelToPoint/labelToPoint.C',
    'topoSet/pointSources/nearestToPoint/nearestToPoint.C',
    'topoSet/pointSources/pointToPoint/pointToPoint.C',
    'topoSet/pointSources/searchableSurfaceToPoint/searchableSurfaceToPoint.C',
    'topoSet/pointSources/sphereToPoint/sphereToPoint.C',
    'topoSet/pointSources/surfaceToPoint/surfaceToPoint.C',
    'topoSet/pointSources/zoneToPoint/zoneToPoint.C',
    'topoSet/faceZoneSources/topoSetFaceZoneSource/topoSetFaceZoneSource.C',
    'topoSet/faceZoneSources/faceZoneToFaceZone/faceZoneToFaceZone.C',
    'topoSet/faceZoneSources/setsToFaceZone/setsToFaceZone.C',
    'topoSet/faceZoneSources/setToFaceZone/setToFaceZone.C',
    'topoSet/faceZoneSources/setAndNormalToFaceZone/setAndNormalToFaceZone.C',
    'topoSet/faceZoneSources/searchableSurfaceToFaceZone/searchableSurfaceToFaceZone.C',
    'topoSet/faceZoneSources/planeToFaceZone/planeToFaceZone.C',
    'topoSet/faceZoneSources/cellToFaceZone/cellToFaceZone.C',
    'topoSet/cellZoneSources/topoSetCellZoneSource/topoSetCellZoneSource.C',
    'topoSet/cellZoneSources/setToCellZone/setToCellZone.C',
    'topoSet/pointZoneSources/topoSetPointZoneSource/topoSetPointZoneSource.C',
    'topoSet/pointZoneSources/setToPointZone/setToPointZone.C',
    'momentOfInertia/momentOfInertia.C',
    'surfaceSets/surfaceSets.C',
    'triSurface/faceTriangulation/faceTriangulation.C',
    'triSurface/orientedSurface/orientedSurface.C',
    'triSurface/surfaceLocation/surfaceLocation.C',
    'triSurface/booleanOps/surfaceIntersection/surfaceIntersection.C',
    'triSurface/booleanOps/surfaceIntersection/surfaceIntersectionFuncs.C',
    'triSurface/booleanOps/surfaceIntersection/edgeIntersections.C',
    'triSurface/booleanOps/booleanSurface/booleanSurface.C',
    'triSurface/booleanOps/intersectedSurface/intersectedSurface.C',
    'triSurface/booleanOps/intersectedSurface/edgeSurface.C',
    'triSurface/triSurfaceSearch/triSurfaceSearch.C',
    'triSurface/triSurfaceSearch/triSurfaceRegionSearch.C',
    'triSurface/triangleFuncs/triangleFuncs.C',
    'triSurface/surfaceFeatures/surfaceFeatures.C',
    'triSurface/triSurfaceLoader/triSurfaceLoader.C',
    'triSurface/triSurfaceTools/triSurfaceTools.C',
    'triSurface/triSurfaceTools/triSurfaceCloseness.C',
    'triSurface/triSurfaceTools/triSurfaceCurvature.C',
    'triSurface/triSurfaceTools/geompack/geompack.C',
    'triSurface/triSurfaceTools/pointToPointPlanarInterpolation.C',
    'twoDPointCorrector/twoDPointCorrector.C',
    'processorLOD/processorLOD/processorLOD.C',
    'processorLOD/box/box.C',
    'processorLOD/cellBox/cellBox.C',
    'processorLOD/faceBox/faceBox.C',
    'AMIInterpolation/AMIInterpolation/AMIInterpolation.C',
    'AMIInterpolation/AMIInterpolation/AMIInterpolationNew.C',
    'AMIInterpolation/AMIInterpolation/advancingFrontAMI/advancingFrontAMI.C',
    'AMIInterpolation/AMIInterpolation/advancingFrontAMI/advancingFrontAMIParallelOps.C',
    'AMIInterpolation/AMIInterpolation/faceAreaWeightAMI/faceAreaWeightAMI.C',
    'AMIInterpolation/AMIInterpolation/nearestFaceAMI/nearestFaceAMI.C',
    'AMIInterpolation/faceAreaIntersect/faceAreaIntersect.C',
    'AMIInterpolation/GAMG/interfaces/cyclicAMIGAMGInterface/cyclicAMIGAMGInterface.C',
    'AMIInterpolation/GAMG/interfaceFields/cyclicAMIGAMGInterfaceField/cyclicAMIGAMGInterfaceField.C',
    'AMIInterpolation/GAMG/interfaces/cyclicACMIGAMGInterface/cyclicACMIGAMGInterface.C',
    'AMIInterpolation/GAMG/interfaceFields/cyclicACMIGAMGInterfaceField/cyclicACMIGAMGInterfaceField.C',
    'AMIInterpolation/triangle2D/triangle2D.C',
    'AMIInterpolation/AMIInterpolation/faceAreaWeightAMI2D/faceAreaWeightAMI2D.C',
    'AMIInterpolation/patches/cyclicAMI/cyclicAMILduInterfaceField/cyclicAMILduInterface.C',
    'AMIInterpolation/patches/cyclicAMI/cyclicAMILduInterfaceField/cyclicAMILduInterfaceField.C',
    'AMIInterpolation/patches/cyclicAMI/cyclicAMIPolyPatch/cyclicAMIPolyPatch.C',
    'AMIInterpolation/patches/cyclicAMI/cyclicAMIPolyPatch/cyclicAMIPolyPatchTopologyChange.C',
    'AMIInterpolation/patches/cyclicAMI/cyclicAMIPointPatch/cyclicAMIPointPatch.C',
    'AMIInterpolation/patches/cyclicAMI/cyclicAMIPointPatchField/cyclicAMIPointPatchFields.C',
    'AMIInterpolation/patches/cyclicACMI/cyclicACMILduInterfaceField/cyclicACMILduInterface.C',
    'AMIInterpolation/patches/cyclicACMI/cyclicACMILduInterfaceField/cyclicACMILduInterfaceField.C',
    'AMIInterpolation/patches/cyclicACMI/cyclicACMIPolyPatch/cyclicACMIPolyPatch.C',
    'AMIInterpolation/patches/cyclicACMI/cyclicACMIPointPatch/cyclicACMIPointPatch.C',
    'AMIInterpolation/patches/cyclicACMI/cyclicACMIPointPatchField/cyclicACMIPointPatchFields.C',
    'AMIInterpolation/patches/cyclicPeriodicAMI/cyclicPeriodicAMIPolyPatch/cyclicPeriodicAMIPolyPatch.C',
    'multiWorld/multiWorldConnectionsObject.C',
    'mappedPatches/mappedPolyPatch/mappedPatchBase.C',
    'mappedPatches/mappedPolyPatch/mappedPolyPatch.C',
    'mappedPatches/mappedPolyPatch/mappedWallPolyPatch.C',
    'mappedPatches/mappedPolyPatch/mappedVariableThicknessWallPolyPatch.C',
    'mappedPatches/mappedPointPatch/mappedPointPatch.C',
    'mappedPatches/mappedPointPatch/mappedWallPointPatch.C',
    'polyTopoChange/topoAction/topoActions.C',
    'polyTopoChange/polyTopoChange.C',
    'PatchFunction1/PatchFunction1/patchFunction1Base.C',
    'PatchFunction1/makePatchFunction1s.C',
    'PatchFunction1/coordinateScaling/coordinateScalings.C',
    'PatchFunction1/CodedField/makeCodedFields.C',
    'PatchFunction1/MappedFile/MappedFileFilterField.C',
    'meshStructure/meshStructure.C',
    'coupling/externalFileCoupler.C',
    'output/vtk/mesh/foamVtkInternalMeshWriter.C',
    'output/vtk/patch/foamVtkPatchMeshWriter.C',
    'output/vtk/topoSet/foamVtkWriteTopoSet.C',
    'output/vtk/topoSet/foamVtkWriteFaceSet.C',
    'output/vtk/topoSet/foamVtkWritePointSet.C',
    'output/vtk/topoSet/foamVtkWriteCellSetFaces.C',
    'regionModel/regionProperties/regionProperties.C',
    'tetOverlapVolume/tetOverlapVolume.C',
]
link_with = [
    lib_fileFormats,
    lib_surfMesh,
]
dependencies = []
cpp_args = [
    '-I' + meson.source_root() / 'src/meshTools',
    '-I' + recursive_include_dirs / 'src/fileFormats',
    '-I' + recursive_include_dirs / 'src/surfMesh',
    '-I' + recursive_include_dirs / 'src/dynamicMesh',
    '-I' + recursive_include_dirs / 'src/meshTools',
    '-I' + recursive_include_dirs / 'src/OpenFOAM',
    '-I' + recursive_include_dirs / 'src/OSspecific/POSIX',
]
lib_meshTools = library(
    'meshTools',
    srcfiles,
    link_with: link_with,
    dependencies: dependencies,
    cpp_args: cpp_args,
    implicit_include_directories: false,
    install: true,
)
pkg.generate(lib_meshTools)
