srcfiles = [
    lnInclude_hack,
    'sixDoFRigidBodyMotion/sixDoFRigidBodyMotion.C',
    'sixDoFRigidBodyMotion/sixDoFRigidBodyMotionIO.C',
    'sixDoFRigidBodyMotion/sixDoFRigidBodyMotionState.C',
    'sixDoFRigidBodyMotion/sixDoFRigidBodyMotionStateIO.C',
    'sixDoFRigidBodyMotion/restraints/sixDoFRigidBodyMotionRestraint/sixDoFRigidBodyMotionRestraint.C',
    'sixDoFRigidBodyMotion/restraints/sixDoFRigidBodyMotionRestraint/sixDoFRigidBodyMotionRestraintNew.C',
    'sixDoFRigidBodyMotion/restraints/linearAxialAngularSpring/linearAxialAngularSpring.C',
    'sixDoFRigidBodyMotion/restraints/linearSpring/linearSpring.C',
    'sixDoFRigidBodyMotion/restraints/sphericalAngularSpring/sphericalAngularSpring.C',
    'sixDoFRigidBodyMotion/restraints/tabulatedAxialAngularSpring/tabulatedAxialAngularSpring.C',
    'sixDoFRigidBodyMotion/restraints/linearDamper/linearDamper.C',
    'sixDoFRigidBodyMotion/restraints/sphericalAngularDamper/sphericalAngularDamper.C',
    'sixDoFRigidBodyMotion/restraints/linearSpringDamper/linearSpringDamper.C',
    'sixDoFRigidBodyMotion/restraints/softWall/softWall.C',
    'sixDoFRigidBodyMotion/constraints/sixDoFRigidBodyMotionConstraint/sixDoFRigidBodyMotionConstraint.C',
    'sixDoFRigidBodyMotion/constraints/sixDoFRigidBodyMotionConstraint/sixDoFRigidBodyMotionConstraintNew.C',
    'sixDoFRigidBodyMotion/constraints/axis/sixDoFRigidBodyMotionAxisConstraint.C',
    'sixDoFRigidBodyMotion/constraints/line/sixDoFRigidBodyMotionLineConstraint.C',
    'sixDoFRigidBodyMotion/constraints/orientation/sixDoFRigidBodyMotionOrientationConstraint.C',
    'sixDoFRigidBodyMotion/constraints/plane/sixDoFRigidBodyMotionPlaneConstraint.C',
    'sixDoFRigidBodyMotion/constraints/point/sixDoFRigidBodyMotionPointConstraint.C',
    'pointPatchFields/derived/sixDoFRigidBodyDisplacement/sixDoFRigidBodyDisplacementPointPatchVectorField.C',
    'pointPatchFields/derived/uncoupledSixDoFRigidBodyDisplacement/uncoupledSixDoFRigidBodyDisplacementPointPatchVectorField.C',
    'sixDoFRigidBodyMotionSolver/sixDoFRigidBodyMotionSolver.C',
    'sixDoFSolvers/sixDoFSolver/sixDoFSolver.C',
    'sixDoFSolvers/sixDoFSolver/sixDoFSolverNew.C',
    'sixDoFSolvers/symplectic/symplectic.C',
    'sixDoFSolvers/CrankNicolson/CrankNicolson.C',
    'sixDoFSolvers/Newmark/Newmark.C',
]
link_with = [
    lib_finiteVolume,
    lib_meshTools,
    lib_forces,
    lib_dynamicMesh,
]
dependencies = []
cpp_args = [
    '-I' + meson.source_root() / 'src/sixDoFRigidBodyMotion',
    '-I' + recursive_include_dirs / 'src/finiteVolume',
    '-I' + recursive_include_dirs / 'src/fileFormats',
    '-I' + recursive_include_dirs / 'src/meshTools',
    '-I' + recursive_include_dirs / 'src/functionObjects/forces',
    '-I' + recursive_include_dirs / 'src/dynamicMesh',
    '-I' + recursive_include_dirs / 'src/sixDoFRigidBodyMotion',
    '-I' + recursive_include_dirs / 'src/OpenFOAM',
    '-I' + recursive_include_dirs / 'src/OSspecific/POSIX',
]
lib_sixDoFRigidBodyMotion = library(
    'sixDoFRigidBodyMotion',
    srcfiles,
    link_with: link_with,
    dependencies: dependencies,
    cpp_args: cpp_args,
    implicit_include_directories: false,
    install: true,
)
pkg.generate(lib_sixDoFRigidBodyMotion)
