subdir('barotropicCompressibilityModel')
subdir('specie')
subdir('laminarFlameSpeed')
subdir('solidSpecie')
subdir('thermophysicalProperties')
subdir('basic')
subdir('reactionThermo')
subdir('SLGThermo')
subdir('chemistryModel')
subdir('solidThermo')
subdir('radiation')
subdir('solidChemistryModel')
